@@ -1,7 +1,9 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
         - automake fucked it up, apparently, --add-missing -f is not quite enough
-          to make it update its files. grrr.
+          to make it update its files, so 4.00 didn't install ev++.h and
+          event.h on make install. grrr.
+        - ev_loop(count|depth) didn't return anything (Robin Haberkorn).
         - change EV_UNDEF to 0xffffffff to silence some overzealous compilers.
         - use "(libev) " prefix for all libev error messages now.
 
